Reverted small changes

--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,9 @@ button {
     border: 1px solid #d9d9d9;
     width: 20%;
 }
+  
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
+}
